create full website

--- a/style.css
+++ b/style.css
@@ -149,7 +149,8 @@
   footer{
     background-color: black;
     color: white;
+  
   }
   .skill-section{
-    height: 400px;
+    height: 100%;
   }
